--- a/app/src/main/res/layout/media_info_row_layout.xml
+++ b/app/src/main/res/layout/media_info_row_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/row_layout_parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -63,5 +64,29 @@
         android:clickable="false"
         android:textSize="@dimen/twelve_sp"
         android:textColor="@color/gray_text"
+        />
+
+    <ImageView
+        android:id="@+id/check_icon_grid"
+        android:layout_width="@dimen/check_icon_size_grid"
+        android:layout_height="@dimen/check_icon_size_grid"
+        android:alpha="0.7"
+        app:srcCompat="@drawable/ic_twotone_check_circle_32"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/expand"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/ripple"
+        android:clickable="true"
+        android:padding="1dp"
+        app:srcCompat="@drawable/ic_baseline_open_in_new_24"
+        android:nextFocusUp="@id/second"
+        android:focusable="true"
+        android:visibility="gone"
         />
 </RelativeLayout>
