--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,4 +35,5 @@
     <dimen name="minimal_icon_size">40dp</dimen>
     <dimen name="list_header_height">48dp</dimen>
     <dimen name="list_header_textsize">16sp</dimen>
+    <dimen name="check_icon_size_grid">40dp</dimen>
 </resources>
