--- a/app/src/main/res/layout/fragment_review_images.xml
+++ b/app/src/main/res/layout/fragment_review_images.xml
@@ -32,5 +32,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
