Fix images analysis algo; other minor fixes

--- a/app/src/main/res/layout/fragment_review_images.xml
+++ b/app/src/main/res/layout/fragment_review_images.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,18 +12,13 @@
         android:divider="@null"
         android:scrollbars="none"
         android:descendantFocusability="afterDescendants"
+        android:layout_alignParentTop="true"
         />
-    <ProgressBar
-        android:id="@+id/loadingProgress"
-        android:layout_width="wrap_content"
+    <com.amaze.fileutilities.home_page.ui.ProcessingProgressView
+        android:id="@+id/processing_progress_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:gravity="center_horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:visibility="gone"
-        android:layout_marginTop="@dimen/material_generic_medium"
+        android:layout_alignBottom="@id/listView"
         />
     <com.amaze.fileutilities.utilis.FastScroller
         android:id="@+id/fastscroll"
@@ -34,4 +29,4 @@
         android:layout_height="match_parent"
         android:visibility="gone"
         />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
