--- a/app/src/main/res/drawable/background_curved_recents.xml
+++ b/app/src/main/res/drawable/background_curved_recents.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners
-        android:topLeftRadius="@dimen/twenty_four_dp"
-        android:topRightRadius="@dimen/twenty_four_dp"
-        android:bottomLeftRadius="@dimen/twenty_four_dp"
-        android:bottomRightRadius="@dimen/twenty_four_dp"
-        />
-    <solid android:color="@color/navy_blue_alt" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape
+            android:shape="rectangle">
+            <corners
+                android:topLeftRadius="@dimen/twenty_four_dp"
+                android:topRightRadius="@dimen/twenty_four_dp"
+                android:bottomLeftRadius="@dimen/twenty_four_dp"
+                android:bottomRightRadius="@dimen/twenty_four_dp"
+                />
+            <solid android:color="@color/navy_blue_alt" />
+        </shape>
+    </item>
+    <item android:drawable="@drawable/ripple" />
+</layer-list>
