--- a/app/src/main/res/drawable/ripple.xml
+++ b/app/src/main/res/drawable/ripple.xml
@@ -4,7 +4,8 @@
     tools:targetApi="lollipop">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/highlight_yellow" />
+            <solid android:color="@color/highlight_yellow_trans" />
+<!--            <corners android:radius="@dimen/round_corner" />-->
         </shape>
     </item>
 </ripple>
