--- a/app/src/main/res/layout/activity_main_actionbar_item_selected.xml
+++ b/app/src/main/res/layout/activity_main_actionbar_item_selected.xml
@@ -31,6 +31,7 @@
     <ImageView
         android:id="@+id/trashButton"
         app:srcCompat="@drawable/ic_round_delete_outline_32"
+        android:background="@drawable/ripple"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
