--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,4 +11,7 @@
         <attr name="mediaImageSrc" format="reference" />
         <attr name="themeColor" format="color" />
     </declare-styleable>
+    <declare-styleable name="AnalysisTypeView">
+        <attr name="analysisTitle" format="string"/>
+    </declare-styleable>
 </resources>
