--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fifty_six_dp">56dp</dimen>
     <dimen name="audio_player_peek_height">86dp</dimen>
+    <dimen name="analysis_footnote">106dp</dimen>
+    <dimen name="grid_view">106dp</dimen>
 
     <dimen name="eighteen_sp">18sp</dimen>
     <dimen name="twenty_four_sp">24sp</dimen>
