--- a/app/src/main/res/layout/analysis_type_view.xml
+++ b/app/src/main/res/layout/analysis_type_view.xml
@@ -39,10 +39,11 @@
             />
         <ImageView
             android:id="@+id/title_hint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/material_generic"
+            android:layout_height="@dimen/material_generic"
             android:src="@drawable/ic_outline_info_32"
             android:layout_marginLeft="@dimen/eight_dp"
+            android:layout_gravity="center_vertical"
             android:visibility="gone"
             />
     </LinearLayout>
